--- a/src/main/resources/configDB.properties
+++ b/src/main/resources/configDB.properties
@@ -1,5 +1,5 @@
 #configuration database
 db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://192.168.1.140:3306/medicinespringbootdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&autoReconnect=true&useSSL=false
-db.username=konrad
-db.password=amon1303
+db.username=???
+db.password=???
